# auto_relocating

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
src/: lib.rs  main.rs
src/adapters/: dialoguer_adapter.rs  mod.rs  multi_progress_adapter.rs  progress_bar_adapter.rs
src/assets/: help.md
src/controllers/: directory.rs  folders.rs  mod.rs  params.rs  params_reader.rs  params_writer.rs  path_items.rs  relocate_controller.rs
src/helpers/: bar_manager.rs  dlg_helper.rs  folders.rs  mod.rs  params.rs  path_items.rs
