[package]
name = "auto_relocating"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialoguer = "0.10.2"
indicatif = "0.17.0"
console = "0.15.1"
glob = "0.3.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
dirs-next = "2.0.0"