[package]
name = "auto_relocating"
authors = ["carmachado"]
description = "Allows you svn relocate multiple working copies to a new URL"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = "0.17.7"
console = "0.15.7"
glob = "0.3.1"
dirs-next = "2.0.0"
clap = { version = "4.4.4", features = ["derive"] }
